--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,6 +2,7 @@
     --color-primary: #367CF4;
     --color-yellow: #F3CA46;
     --color-dark: #333333;
+    --color-dark56: rgba(51, 51, 51, 0.56);
     --color-white: #FFFFFF;
     --color-purple: #7b5deb;
     --color-blush: #DA657A;;
