fix links in section what-we-do

--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -3,7 +3,7 @@
         <h4 class="h4">Что мы делаем</h4>
         <h2 class="h2 section-title">Приоритетные для нас сферы</h2>
         <div class="what-we-do__items">
-            <a href="{{site.baseuri}}/projects" class="what-we-do__item what-we-do__item1">
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item1">
                 <h3 class="h3 what-we-do__item1-title">Цифровизация бизнес-процессов</h3>
             </a>
             <a href="{{site.baseuri}}/projects" class="what-we-do__item what-we-do__item2">
