--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -6,10 +6,10 @@
             <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item1">
                 <h3 class="h3 what-we-do__item1-title">Цифровизация бизнес-процессов</h3>
             </a>
-            <a href="{{site.baseuri}}/projects" class="what-we-do__item what-we-do__item2">
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item2">
                 <h3 class="h3 what-we-do__item2-title">Системы управления проектами</h3>
             </a>
-            <a href="{{site.baseuri}}/projects" class="what-we-do__item what-we-do__item3">
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item3">
                 <h3 class="h3 what-we-do__item3-title">Электронный документооборот</h3>
             </a>
         </div>
