--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -1,6 +1,3 @@
-@media (max-width: 1280px) {
-}
-
 @media (max-width: 960px) {
     .h4 {
         font-size: 24px;
@@ -143,6 +140,23 @@
             }
             &-content {
                 width: 100%;
+            }
+        }
+    }
+    .project {
+        &-content {
+            margin-top: 80px;
+            & > h1 {
+                font-size: 56px;
+                line-height: 56px;
+            }
+            & > h2 {
+                font-size: 48px;
+                line-height: 56px;
+            }
+            & > h4 {
+                font-size: 24px;
+                line-height: 32px;
             }
         }
     }
@@ -647,7 +661,6 @@
             margin-top: 40px;
         }
     }
-
     .how-we-work {
         &__item {
             &-title {
@@ -751,7 +764,6 @@
             }
         }
     }
-
     .footer {
         &__title {
             font-size: 24px;
