--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,6 +4,7 @@
     --color-dark: #333333;
     --color-dark56: rgba(51, 51, 51, 0.56);
     --color-white: #FFFFFF;
+    --color-white72: rgba(255, 255, 255, 0.72);
     --color-purple: #7b5deb;
     --color-blush: #DA657A;;
     --color-bacground: #F3F4F5;
