--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -7,6 +7,6 @@
         <p class="hero__descr">
             Успех наших проектов стоит на 3-х китах: качественная аналитика, продуктовый дизайн, внедрение в работу
         </p>
-        <button class="btn btn--dark hero__btn">Начать проект</button>
+        <button id="open-btn-hero" class="btn btn--dark hero__btn">Начать проект</button>
     </div>
 </section>
