--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="footer__top">
             <h1 class="footer__title">Приглашаем вас на бесплатную консультацию</h1>
             <p class="footer__descr">После 15-минутной консультации мы составим коммерческое предложение с ориентиром по стоимости и срокам, пришлем его через 2 дня.</p>
-            <button class="btn btn--white footer__btn">Записаться на консультацию</button>
+            <button id="open-btn-footer" class="btn btn--white footer__btn modal-btn">Записаться на консультацию</button>
         </div>
         <div class="footer__bottom">
             <p class="footer__text footer__company">© 2022 ООО «Цитрониум»</p>
