--- a/_includes/home/section-how-we-work.html
+++ b/_includes/home/section-how-we-work.html
@@ -10,7 +10,7 @@
                         Мы поможем определить цели проекта и критерии их достижения, проведём необходимые исследования,
                         спроектируем дизайн и архитектуру. На протяжении всего проекта мы будем вашим партнёром.
                     </p>
-                    <a href="#" class="link how-we-work__item-link">Получить консультацию</a>
+                    <a href="#" class="link how-we-work__item-link modal-btn">Получить консультацию</a>
                 </div>
                 <div class="how-we-work__item-center">
                     <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/rocket-rotate2.png" alt="" />
@@ -23,7 +23,7 @@
                         У вас есть готовое техническое задание или концепция проекта. Мы внимательно изучим объем работ,
                         разобьем на этапы, согласуем сроки и бюджет и выдадим результат.
                     </p>
-                    <a href="#" class="link how-we-work__item-link">Расчитать смету по ТЗ</a>
+                    <a href="#" class="link how-we-work__item-link modal-btn">Расчитать смету по ТЗ</a>
                 </div>
                 <div class="how-we-work__item-center">
                     <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/dart.png" alt="" />
@@ -36,7 +36,7 @@
                         У вас есть сложные задачи, которые требуют особого подхода. Мы будем работать спринтами, по
                         итогам которых команда проанализирует результаты и поставит приоритеты для следующего цикла.
                     </p>
-                    <a href="#" class="link how-we-work__item-link">Написать нам</a>
+                    <a href="#" class="link how-we-work__item-link modal-btn">Написать нам</a>
                 </div>
                 <div class="how-we-work__item-center">
                     <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/calc.png" alt="" />
