--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,8 +10,9 @@
             </div>
         </div>
     </div>
-    <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
   </body>
     
     {%- include footer.html -%}
+    {%- include feedback-form.html -%}
+    <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
 </html>
