--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -34,3 +34,20 @@
     color: var(--color-white);
     background-color: var(--color-primary);
 }
+
+.link {
+    font-weight: 500;
+    font-size: 24px;
+    color: var(--color-primary);
+}
+
+.link:after {
+    display: inline-block;
+    content: "";
+    background-image: url("img/rarrow.svg");
+    background-size: 18px 14px;
+    background-repeat: no-repeat, repeat;
+    height: 14px;
+    width: 18px;
+    margin-left: 9px;
+}
