--- a/_sass/_feedback-form.scss
+++ b/_sass/_feedback-form.scss
@@ -1,13 +1,15 @@
-.feedback-form {
+.feedback {
     width: 100%;
     height: 100%;
     position: fixed;
     left: 0;
     top: 0;
     z-index: 2;
-    display: none;
+    transform: scale(0);
+    transition: .4s ease;
     &.active {
-        display: block;
+        //display: block;
+        transform: scale(100%);
     }
     &__container {
         display: flex;
@@ -16,10 +18,10 @@
     }
     &__body {
         margin: auto;
-        width: 700px;
+        max-width: 700px;
+        //width: 100%;
         background-color: #fff;
         border-radius: 10px;
-        text-align: center;
         padding: 56px;
         position: relative;
         &-top {
@@ -31,6 +33,7 @@
         &-close {
             font-size: 30px;
             cursor: pointer;
+            color: rgba(0, 0, 0, 0.56);
         }
         &-title {
             font-weight: 600;
@@ -38,30 +41,31 @@
             line-height: 48px;
             color: #333333;
         }
-        &-name {
+        &-item {
             margin-top: 40px;
-            display: block;
-            height: 64px;
-            width: 100%;
-            padding: 20px;
-            border: 2px solid rgba(51, 51, 51, 0.2);
-            border-radius: 10px;
-            font-size: 18px;
-            color: wheat;
-            &:focus {
-                outline: none;
-            }
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
         }
-        &-phone {
-            margin-top: 40px;
+        &-label {
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 24px;
+            color: #000000;
+        }
+        &-input {
             display: block;
             height: 64px;
             width: 100%;
+            margin-top: 8px;
             padding: 20px;
             border: 2px solid rgba(51, 51, 51, 0.2);
             border-radius: 10px;
-            font-size: 18px;
-            color: wheat;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 24px;
+            color: black;
             &:focus {
                 outline: none;
             }
@@ -70,6 +74,13 @@
             padding: 10px 50px;
             margin-top: 40px;
             width: 100%;
+        }
+        &-personal {
+            margin-top: 16px;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            color: rgba(0, 0, 0, 0.5);
         }
     }
 }
