--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,6 +9,7 @@
 
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth; 
 }
 
 *,
@@ -46,6 +47,17 @@ main {
     background: var(--color-bacground);
 }
 
-
+/*плавная загрузка страниц*/
+@-webkit-keyframes fade-in {   0% { opacity: 0.1; }   100% { opacity: 1; }   }
+@-moz-keyframes    fade-in {   0% { opacity: 0.1; }   100% { opacity: 1; }   }
+@-o-keyframes      fade-in {   0% { opacity: 0.1; }   100% { opacity: 1; }   }
+@keyframes         fade-in {   0% { opacity: 0.1; }   100% { opacity: 1; }   }
+ 
+body {
+  -webkit-animation: fade-in .5s ease-in-out; /* Safari 4+ */
+  -moz-animation: fade-in .5s ease-in-out; /* Fx 5+ */
+  -o-animation: fade-in .5s ease-in-out; /* Opera 12+ */
+  animation: fade-in .5s ease-in-out; /* IE 10+, Fx 29+ */
+}
 
 
