--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,13 +3,15 @@
   {%- include head.html -%}
   <body>
     {%- include home/header.html -%}
-    <div class="project">
-        <div class="container">
-            <div class="project-content">
-                {{ content }}
-            </div>
-        </div>
-    </div>
+    <main>
+      <div class="project">
+          <div class="container">
+              <div class="project-content">
+                  {{ content }}
+              </div>
+          </div>
+      </div>
+    </main>
   </body>
     
     {%- include footer.html -%}
